# flamingtux

./: AUTHORS  Application.cpp  Application.cpp~  Application.h  Application.h~  CommonFunctions.cpp  CommonFunctions.cpp~  CommonFunctions.h  CommonFunctions.h~  Doxyfile  Main.cpp  Main.cpp~  Makefile.am  Makefile.common.in  ModelColumns.h  ProjectHome.md  README  config.h.in  configure  configure.in  flamingtux.kdevelop  main
trunk/: AUTHORS  Application.cpp  Application.cpp~  Application.h  Application.h~  CommonFunctions.cpp  CommonFunctions.h  CommonFunctions.h~  FlamingTux.kdevelop.pcs  Main.cpp  Main.cpp~  Makefile.am  Makefile.in  ModelColumns.h~  aclocal.m4  configure.in  flamingtux.kdevelop  main
trunk/autom4te.cache/: output.1
trunk/backend/: BackendEvents.cpp  BackendEvents.h  Config.cpp  Config.h  ConfigOptions.cpp  ConfigOptions.h  FireClient.cpp  FireClient.cpp~  FireClient.h  GtkHelperFunctions.h  Log.cpp  Log.h  common.h
trunk/data/: Makefile
trunk/gui/: BuddyListWin.cpp  BuddyListWin.cpp~  BuddyListWin.h  BuddyListWin.h~  ConvoWin.cpp  ConvoWin.cpp~  ConvoWin.h  ConvoWin.h~  DialogWin.cpp  LoginWin.cpp  LoginWin.cpp~  LoginWin.h  LoginWin.h~  PreferencesWin.cpp  PreferencesWin.cpp~  PreferencesWin.h  PreferencesWin.h~
trunk/gui/glade/: fire4lin.glade  (+1 more)
trunk/src/: Application.cpp.in  Application.h.in  BackendEvents.h  BuddyListWin.cpp  BuddyListWin.h.in  CommonFunctions.cpp  Config.cpp  ConvoWin.cpp  ConvoWin.h  DialogWin.h  GtkHelperFunctions.cpp  GtkSpellProxy.h  LICENSE  Log.cpp  Log.h  Main.cpp  Makefile.am  Makefile.in  PreferencesWin.cpp
(+52 files in other folders)
