
AC_INIT(configure.in)
AM_INIT_AUTOMAKE(flamingtux, 0.2)
AC_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_LIBTOOL

AC_LANG_CPLUSPLUS

PKG_CHECK_MODULES([GTKMM], [gtkmm-2.4 >= 2.8.0])
PKG_CHECK_MODULES([GTK], [gtk+-2.0 >= 2.8.0])
PKG_CHECK_MODULES([GTHREAD], [gthread-2.0 >= 2.14.0])
PKG_CHECK_MODULES([LIBGLADEMM], [libglademm-2.4 >= 2.6.4])
PKG_CHECK_MODULES([GTKSPELL], [gtkspell-2.0 >= 2.0.10])

AC_OUTPUT(Makefile src/Makefile src/Application.cpp src/Application.h src/BuddyListWin.h Makefile.common)
